--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
       </p>
       <ol>
         <li>Click and drag on the letters in the grid to select them.</li>
+        <li> Tap the first letter of the word and the last letter of it to automatically check the word if you chose the manual selection mode</li>
         <li>
           You can manually select cells by choosing the tap-to-select on the
-          selection mode. Tap the first letter of the word and the last letter of it to automatically check the word.
+          selection mode.
         </li>
         <li>
           Words can be placed <strong>horizontally</strong>,
